--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Natalia 💖</title>
+  <title>Misia 💖</title>
+
   <style>
     * { box-sizing: border-box; }
+
     body {
       margin: 0;
       height: 100vh;
@@ -16,81 +18,100 @@
       background: linear-gradient(135deg, #f8c8dc, #ffd6e8);
       position: relative;
     }
+
     .card {
-      width: min(92vw, 380px);
-      background: #fff;
-      padding: 34px 28px;
-      border-radius: 22px;
+      width: min(94vw, 400px);
+      background: white;
+      padding: 28px;
+      border-radius: 24px;
       text-align: center;
-      box-shadow: 0 12px 35px rgba(0,0,0,0.15);
+      box-shadow: 0 14px 40px rgba(0,0,0,0.18);
       position: relative;
       z-index: 10;
     }
+
     h1 {
-      margin: 0 0 22px;
       font-size: 22px;
-      line-height: 1.25;
-      color: #222;
+      margin-bottom: 14px;
     }
+
+    .gif {
+      width: 100%;
+      border-radius: 18px;
+      margin-bottom: 18px;
+    }
+
     .buttons {
       position: relative;
       height: 110px;
-      margin-top: 6px;
-      border-radius: 16px;
+      margin-top: 10px;
     }
+
     button {
       position: absolute;
-      padding: 12px 26px;
+      padding: 12px 28px;
       font-size: 16px;
       border-radius: 999px;
-      border: 0;
+      border: none;
       cursor: pointer;
       user-select: none;
       -webkit-tap-highlight-color: transparent;
     }
+
     #yes {
       background: #ff4d6d;
-      color: #fff;
+      color: white;
       left: 40px;
       top: 40px;
     }
+
     #no {
       background: #e9e9e9;
       color: #555;
-      left: 200px;
+      left: 210px;
       top: 40px;
     }
+
     .note {
-      margin-top: 18px;
       font-size: 12px;
       color: #777;
+      margin-top: 16px;
     }
+
+    /* serduszka */
     .heart {
       position: absolute;
       bottom: -30px;
       font-size: 22px;
-      opacity: 0.85;
       animation: floatUp linear forwards;
       pointer-events: none;
-      z-index: 1;
+      opacity: 0.85;
     }
+
     @keyframes floatUp {
-      from { transform: translateY(0) scale(1); opacity: 0.9; }
-      to   { transform: translateY(-115vh) scale(1.7); opacity: 0; }
+      from { transform: translateY(0) scale(1); }
+      to   { transform: translateY(-120vh) scale(1.6); opacity: 0; }
     }
   </style>
 </head>
 <body>
 
   <div class="card">
-    <h1>Natalia, czy zostaniesz moją Walentynką? 💖</h1>
+    <h1>Misia! Czy zostaniesz moją Walentynką? 💖</h1>
+
+    <!-- GIF KOTEK (DARMOWY, LEGALNY) -->
+    <img
+      class="gif"
+      src="https://media.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif"
+      alt="Cute Valentine Cat"
+    />
 
     <div class="buttons" id="arena">
       <button id="yes">TAK 💘</button>
       <button id="no">NIE</button>
     </div>
 
-    <div class="note">Opcja „NIE” jest trochę nieśmiała 😳</div>
+    <div class="note">Opcja „NIE” jest dziś nieaktywna 😳</div>
   </div>
 
   <script>
@@ -102,8 +123,10 @@
       e?.preventDefault?.();
       const a = arena.getBoundingClientRect();
       const b = noBtn.getBoundingClientRect();
+
       const maxX = Math.max(0, a.width  - b.width  - 6);
       const maxY = Math.max(0, a.height - b.height - 6);
+
       noBtn.style.left = (Math.random() * maxX) + "px";
       noBtn.style.top  = (Math.random() * maxY) + "px";
     }
@@ -113,14 +136,18 @@
 
     yesBtn.addEventListener("click", () => {
       document.body.innerHTML = `
-        <div style="height:100vh;display:grid;place-items:center;
-          text-align:center;font-family:Arial;
+        <div style="
+          height:100vh;
+          display:grid;
+          place-items:center;
+          text-align:center;
+          font-family:Arial;
           background:linear-gradient(135deg,#ffb3c6,#ffd6e8);">
           <div>
-            <div style="font-size:52px;">YAAAAY 💕</div>
-            <div style="font-size:22px;margin-top:10px;">
-              Najlepsza decyzja dnia, Natalio 😍
-            </div>
+            <div style="font-size:48px;">❤️ Udało się! ❤️</div>
+            <p style="font-size:22px; margin-top:12px;">
+              Super… zaraz przedyskutujemy co dalej 😏☕
+            </p>
           </div>
         </div>`;
     });
@@ -129,11 +156,11 @@
       const heart = document.createElement("div");
       heart.className = "heart";
       heart.textContent = "❤️";
-      heart.style.left = (Math.random()*100) + "vw";
-      heart.style.animationDuration = (3+Math.random()*3) + "s";
+      heart.style.left = Math.random() * 100 + "vw";
+      heart.style.animationDuration = (3 + Math.random() * 3) + "s";
       document.body.appendChild(heart);
       setTimeout(() => heart.remove(), 6500);
-    }, 320);
+    }, 300);
   </script>
 
 </body>
