--- a/index.html
+++ b/index.html
@@ -147,19 +147,16 @@ yesBtn.addEventListener("click", () => {
       padding:20px;
     ">
       <div>
-        <div style="font-size:44px; margin-bottom:10px;">
-          🐾 Masz szczęście 😏
-        </div>
-
         <img
-          src="https://media.giphy.com/media/l0HlQ7LRal8b1B2eA/giphy.gif"
-          alt="Happy Labrador"
-          style="max-width:320px; width:90%; border-radius:20px; box-shadow:0 10px 30px rgba(0,0,0,0.2); margin:20px 0;"
+          src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
+          alt="Cute Labrador"
+          style="
+            max-width:360px;
+            width:90%;
+            border-radius:24px;
+            box-shadow:0 12px 35px rgba(0,0,0,0.25);
+          "
         />
-
-        <div style="font-size:20px;">
-          To teraz… zaraz przedyskutujemy co dalej ☕❤️
-        </div>
       </div>
     </div>
   `;
