--- a/index.html
+++ b/index.html
@@ -147,20 +147,21 @@ yesBtn.addEventListener("click", () => {
       padding:20px;
     ">
       <div>
+        <div style="font-size:44px; margin-bottom:10px;">
+          🐾 Masz szczęście 😏
+        </div>
+
         <img
-          src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
-          alt="Cute Labrador"
-          style="
-            max-width:360px;
-            width:90%;
-            border-radius:24px;
-            box-shadow:0 12px 35px rgba(0,0,0,0.25);
-          "
-        />
+          src="https://giphy.com/gifs/901mxGLGQN2PyCQpoc"
+          alt="Happy Labrador"
+          style="max-width:320px; width:90%; border-radius:20px; box-shadow:0 10px 30px rgba(0,0,0,0.2); margin:20px 0;"
+        "
+      />
       </div>
     </div>
   `;
 });
+
 
 
     setInterval(() => {
